* fix for accessibility color contrast

--- a/web/src_static/scss/hrs/_autocomplete.scss
+++ b/web/src_static/scss/hrs/_autocomplete.scss
@@ -39,5 +39,5 @@
   right: 5px;
   bottom: 0px;
   z-index: 11;
-  color: red;
+  color: #CC0000;
 }
